infra/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scoreserver-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: scoreserver-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scoreserver-backend
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scoreserver
          image: ghcr.io/ictsc/ictsc-regalia/backend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: scoreserver-backend
spec:
  selector:
    app.kubernetes.io/name: scoreserver-backend
  ports:
    - name: http
      port: 8080
      targetPort: http
